Enable CORS for frontend and serve Vite build

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -60,7 +60,7 @@ $color-title-name: blue, red, purple, lightblue, dark;
 $color-title-color: $primary-color, #ff5252, #9575cd, #23b7e5, lighten($dark-layout, 7%);
 
 // layout-6 background color
-$layout-6-bg-color: #21819e;
+$layout-6-bg-color: blue;
 
 $theme-font-family: 'Open Sans', sans-serif;
 $theme-font-size: 14px;
